--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ authors = ["Matthew Oduamafu <mattoduamafu@gmail.com>"]
 [dependencies]
 rocket = { version = "0.5.1", features = ["json"] }
 serde_json = "1.0.128"
+base64 = "0.22.1"
